CSS/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

main {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}

img {
  max-width: 100%;
}

/* CLASSES */

.container {
  max-width: 1300px;
  margin: 0 auto;
  padding: 60px 0;
}

.row {
  display: flex;
  flex-wrap: wrap;
  gap: 60px 20px;
  justify-content: center;
}

.card {
  position: relative;
  flex-basis: calc((100% - 80px) / 3);
}

.debug footer {
  background-color: black;
  color: white;
  min-height: 50px;
  width: 100vw;
}

/* HEADER */

header {
  display: flex;
  justify-content: space-around;
  background-color: rgb(237, 114, 46);
  align-items: center;
}

nav ul,
header div ul {
  padding: 20px;
  display: flex;
  list-style: none;
}

header nav ul li a,
header div ul li {
  text-decoration: none;
  color: white;
  padding-left: 5px;
}

header img {
  width: auto;
  height: 30px;
}

/* LABELS */

.discount {
  position: relative;
  display: inline-block;
  bottom: 110px;
  background-color: red;
  color: white;
  padding: 3px 5px;
}

.green {
  position: relative;
  display: inline-block;
  bottom: 110px;
  background-color: green;
  color: white;
  padding: 3px 5px;
}

/* FIGCAPTIONS */

figcaption ul {
  list-style: none;
}

figcaption ul li:nth-child(odd) {
  color: grey;
  font-size: 13px;
}

figcaption ul li:last-child :nth-child(odd) {
  color: red;
}

/* HEARTS */

.hearts {
  position: absolute;
  display: inline-block;
  background-color: white;
  padding: 10px 13px;
  top: 8px;
  right: 0px;
  font-size: 15px;
}

.hearts:hover {
  color: red;
}

